mastered the universe, nbd...and also made a list of commitments

--- a/app/views/commitments/index.html.erb
+++ b/app/views/commitments/index.html.erb
@@ -1,4 +1,5 @@
-<% @commitments.each do|commitment| %>		
-	<%=commitment.goal%>
-<% end %>
-
+<ol>
+	<% @commitments.each do|commitment| %>
+		<li><%=commitment.goal%> <%=commitment.when%></li>
+	<% end %>
+</ol>
